API implemented in script.js and variable.js file created

--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@
     </main>
 
     <footer class="footer">
-      <p>Powered by <a href="https://openweathermap.org" target="_blank" rel="noopener">OpenWeatherMap</a></p>
+      <p>Powered by <a href="https://api.weather.gov" target="_blank" rel="noopener">api.weather.gov</a> (NWS) · Geocoding: <a href="https://nominatim.openstreetmap.org" target="_blank" rel="noopener">Nominatim</a></p>
     </footer>
   </div>
+  <script src="variables.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
