--- a/index.html
+++ b/index.html
@@ -73,6 +73,6 @@
     </footer>
   </div>
   <script src="variables.js"></script>
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
